--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "scripts": {
     "start": "node ./bin/www"
   },
-"engines":{
-  "node":"0.12.5",
-  "npm": "1.4.21"
-},
+  "engines": {
+    "node": "0.12.5",
+    "npm": "1.4.21"
+  },
   "dependencies": {
     "body-parser": "~1.8.1",
     "cookie-parser": "~1.3.3",
@@ -17,6 +17,9 @@
     "express": "~4.9.0",
     "express-partials": "^0.3.0",
     "morgan": "~1.3.0",
-    "serve-favicon": "~2.1.3"
+    "node-pre-gyp": "^0.6.7",
+    "sequelize": "^1.7.0",
+    "serve-favicon": "~2.1.3",
+    "sqlite3": "^3.0.8"
   }
 }
