--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "quiz",
+  "name": "quiz-plp",
   "version": "0.0.0",
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
   },
   "engines": {
-    "node": "0.10.x",
-    "npm": "1.4.x"
+    "node": "0.12.7",
+    "npm": "1.4.21"
   },
   "dependencies": {
     "body-parser": "~1.8.1",
