--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
-  "name": "quiz",
+  "name": "quiz-plp",
   "version": "0.0.0",
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
   },
   "engines": {
-    "node": "0.10.x",
-    "npm": "1.4.x"
+    "node": "0.12.7",
+    "npm": "1.4.21"
   },
+  "devDependencies": {
+    "sqlite3": "^3.0.4"
+  },
+
   "dependencies": {
     "body-parser": "~1.8.1",
     "cookie-parser": "~1.3.3",
@@ -17,8 +21,8 @@
     "express": "~4.9.0",
     "express-partials": "^0.3.0",
     "morgan": "~1.3.0",
+    "pg": "^4.1.1",
     "sequelize": "^2.0.0-rc4",
-    "serve-favicon": "~2.1.3",
-    "sqlite3": "^3.0.4"
+    "serve-favicon": "~2.1.3"
   }
 }
